--- a/globals.css
+++ b/globals.css
@@ -71,13 +71,6 @@ img {
     display: block;
 }
 
-/*.container {*/
-/*    width: 100%;*/
-/*    max-width: var(--container-width);*/
-/*    margin-left: auto;*/
-/*    margin-right: auto;*/
-/*}*/
-
 a {
     text-decoration: none;
 }
@@ -89,4 +82,16 @@ input, button, textarea, select {
 :focus-visible {
     outline: 2px solid var(--color-primary);
     outline-offset: 2px;
+}
+
+@media only screen and (min-width: 1024px) {
+    main{
+        margin: 0 150px;
+    }
+
+
+
+    footer{
+        margin: 0 150px;
+    }
 }
