--- a/globals.css
+++ b/globals.css
@@ -55,11 +55,6 @@
     background-color: var(--color-secondary-text);
 }
 
-html {
-    font-size: 16px;
-    scroll-behavior: smooth;
-}
-
 body {
     font-family: var(--font-poppins), serif;
     font-weight: 400;
@@ -75,23 +70,12 @@ a {
     text-decoration: none;
 }
 
-input, button, textarea, select {
-    font: inherit;
-}
+/*input, button, textarea, select {*/
+/*    font: inherit;*/
+/*}*/
 
 :focus-visible {
     outline: 2px solid var(--color-primary);
     outline-offset: 2px;
 }
 
-@media only screen and (min-width: 1024px) {
-    main{
-        margin: 0 150px;
-    }
-
-
-
-    footer{
-        margin: 0 150px;
-    }
-}
